@@ -11,7 +11,6 @@ o  Fix .spec file
 o  Fix redhat init script
 o  Better logging of SSL Junk
 o  Handle unseeded entries in LDAP and possibly other database modules
-o  Do something clever when tls is requested as it isn't supported
 
 From Rob Wyn Jones
 * Allow multiple servers for a user (or default) are connect to in series
